add item carousel & lightbox

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,4 @@ $color-grayish-blue: hsl(220, 14%, 75%);
 $color-light-grayish-blue: hsl(223, 64%, 98%);
 $color-white: hsl(0, 0%, 100%);
 $color-black: hsl(0, 0%, 0%);
+$color-orange-active: invert(47%) sepia(95%) saturate(862%) hue-rotate(348deg) brightness(105%) contrast(102%);
