--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,9 @@
 	padding: 0;
 	font-family: 'League Spartan', sans-serif;
 }
+
+.main-contain {
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	justify-content: center;
+}
