--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,18 +1,17 @@
 @use './variables' as var;
+@use './mixins' as mix;
 
 .navbar {
 	border-bottom: 3px solid var.$color-light-grayish-blue;
-	display: flex;
 	justify-content: space-around;
-	align-items: center;
+	@include mix.alignment-center();
 
 	& img {
 		cursor: pointer;
 	}
 
 	&-main {
-		display: flex;
-		align-items: center;
+		@include mix.alignment-center();
 
 		& p {
 			padding: 20px;
@@ -29,8 +28,7 @@
 	}
 
 	&-costumer {
-		display: flex;
-		align-items: center;
+		@include mix.alignment-center();
 		gap: 30px;
 
 		&-cart {
@@ -55,6 +53,7 @@
 				padding: 1px 0;
 				top: -5px;
 				left: 80%;
+				cursor: pointer;
 			}
 			&-dropdown {
 				background-color: var.$color-white;
@@ -63,8 +62,8 @@
 				top: 35px;
 				transform: translateX(-50%);
 				box-shadow:
-					0 4px 8px 0 rgba(0, 0, 0, 0.05),
-					0 6px 20px 0 rgba(0, 0, 0, 0.15);
+					0 4px 8px 0 rgba(var.$color-black, 0.05),
+					0 6px 20px 0 rgba(var.$color-black, 0.15);
 				border-radius: 5px;
 				width: 230px;
 				height: auto;
@@ -97,14 +96,14 @@
 
 					& .cart-dropdown {
 						&-item {
-							display: flex;
-							align-items: center;
+							@include mix.alignment-center();
 							gap: 7px;
 							margin-bottom: 20px;
 	
 							&-thumbnail {
 								width: 35px;
 								border-radius: 5px;
+								cursor: auto;
 							}
 							&-details {
 								text-align: left;
@@ -136,6 +135,8 @@
 							border-radius: 7px;
 							font-weight: 700;
 							font-size: 12px;
+							cursor: pointer;
+							@include mix.btn-effect();
 						}
 					}
 				}
