--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,6 @@
+// Media Queries
+$mobile: 376px;
+
 $color-orange: hsl(26, 100%, 55%);
 $color-pale-orange: hsl(25, 100%, 94%);
 $color-dark-blue:  hsl(220, 13%, 13%);
