--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,9 @@
 // Media Queries
-$mobile: 376px;
+$breakpoint-m: 831px;
+$breakpoint-s: 660px;
+
+$content-width: 350px;
+$content-width-m: 300px;
 
 $color-orange: hsl(26, 100%, 55%);
 $color-pale-orange: hsl(25, 100%, 94%);
