--- a/src/styles/iteminfo.scss
+++ b/src/styles/iteminfo.scss
@@ -10,6 +10,13 @@
 		max-width: var.$content-width-m;
 	}
 
+	@media screen and (max-width: var.$breakpoint-s) {
+		margin: 20px 20px 0 20px;
+		justify-self: center;
+		align-self: start;
+		max-width: 100vw;
+	}
+
 	& .subtitle {
 		text-transform: uppercase;
 		color: var.$color-orange;
