--- a/src/styles/iteminfo.scss
+++ b/src/styles/iteminfo.scss
@@ -80,6 +80,11 @@
 			& .minus,
 			& .plus {
 				cursor: pointer;
+
+				&.disable {
+					cursor: not-allowed;
+					filter: invert(46%) sepia(28%) saturate(186%) hue-rotate(178deg) brightness(88%) contrast(94%);
+				}
 			}
 		}
 		& .button {
@@ -100,6 +105,24 @@
 				filter: brightness(0) saturate(100%) invert(91%) sepia(1%) saturate(2891%) hue-rotate(199deg)
 					brightness(108%) contrast(98%);
 			}
+		}
+	}
+	& .warning {
+		font-size: 12px;
+		color: var.$color-orange;
+		margin-top: 5px;
+		height: 15px;
+		-webkit-transition: all 0.5s ease-in-out;
+		-o-transition: all 0.5s ease-in-out;
+		transition: all 0.5s ease-in-out;
+		opacity: 0;
+		
+		&.show {
+			-webkit-transform: translateY(-5px);
+			-ms-transform: translateY(-5px);
+			-o-transform: translateY(-5px);
+			transform: translateY(-5px);
+			opacity: 1;
 		}
 	}
 }
