--- a/src/App.scss
+++ b/src/App.scss
@@ -22,3 +22,17 @@
 		grid-template-columns: auto;
 	}
 }
+
+.attribution {
+	position: absolute;
+	transform: translateX(-50%);
+    left: 50%;
+	bottom: 5px;
+	font-size: 11px;
+	text-align: center;
+	z-index: 1;
+}
+.attribution a {
+	color: hsl(228, 45%, 44%);
+	text-decoration: none;
+}
